--- a/ConditionalProbability.ipynb
+++ b/ConditionalProbability.ipynb
@@ -2,59 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as dumpy\n",
     "import numpy as np\n",
-    "import numpy"
+    "import numpy\n",
+    "import importlib # needed to reload a module"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'diseasetests' from '/home/jovyan/cosc311/fa20/diseasetests.py'>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# runs the diseasetests.py and puts the results into a namespace called diseasetests\n",
-    "#import diseasetests as dt"
+    "import diseasetests as dt\n",
+    "importlib.reload(dt) # reload to get the new defs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Person',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'blah',\n",
+       " 'np']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class Person:\n",
-    "    def __init__(self):\n",
-    "        self.hasDisease = np.random.choice([0,1],p=[9999/10000, 1/10000])"
+    "dir(dt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of positive tests: (1057,)\n",
-      "Number of actual positives: 8\n"
+      "Number of positive tests: (1027,)\n",
+      "Number of actual positives: 12\n"
      ]
     }
    ],
    "source": [
-    "people = [Person() for i in range(1,100000)]\n",
+    "people = [dt.Person() for i in range(1,100000)]\n",
     "tests = np.array([0 for person in people])\n",
     "count = 0\n",
     "for (index,person) in enumerate(people):\n",
