--- a/ContinuousDistributions.ipynb
+++ b/ContinuousDistributions.ipynb
@@ -921,11 +921,294 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a cdf, $F$, of random variable $X$, we want to be able to know the _inverse_ distribution function, denoted and defined as $ F^{-1}(x) = t $ where $t$ is the unique value such that $F(t) = P(X \\leq t ) = x$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal_cdf(4 + 5*10, 4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for the normal distribution\n",
+    "def inverse_normal_cdf(t, mu, sigma):\n",
+    "    # BINARY SEARCH!\n",
+    "    # - start our \"low\" value at somewhere like -10\n",
+    "    # - start out \"high\" value at ~ 10\n",
+    "    \n",
+    "    # make sure these center around mu\n",
+    "    high, low = 10*sigma + mu, -10*sigma + mu\n",
+    "    \n",
+    "    # the tolerance if we are \"close enough\" to t\n",
+    "    tol = 1e-5\n",
+    "    \n",
+    "    # for safety\n",
+    "    max_iters = 1000\n",
+    "    loop = 0\n",
+    "    \n",
+    "    while loop < max_iters:\n",
+    "        loop += 1\n",
+    "        mid = (high+low)/2\n",
+    "        if abs(normal_cdf(mid, mu, sigma) - t) < tol:\n",
+    "            return mid\n",
+    "        elif normal_cdf(mid, mu, sigma) > t:\n",
+    "            high = mid # mid is too high, bring the range down \n",
+    "        else:\n",
+    "            low = mid\n",
+    "    \n",
+    "    print(\"Error! Took too long to converge!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6448974609375"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inverse_normal_cdf(0.95, 0, 1) # try for standard normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9500045206832439"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal_cdf(inverse_normal_cdf(0.95, 0, 1), 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the probability of lying inside the\n",
+    "# range [mu - t, mu + t]\n",
+    "def normal_center_probability(t, mu, sigma):\n",
+    "    # return the difference of two integrals\n",
+    "    return normal_cdf(mu + t, mu, sigma) - normal_cdf(mu - t, mu, sigma)\n",
+    "\n",
+    "# Calculates the probability of lying oustide the range\n",
+    "# [mu - t, mu + t]\n",
+    "def normal_tail_probability(t, mu, sigma):\n",
+    "    # use the law of total probability, full integral must be 1\n",
+    "    return 1 - normal_center_probability(t, mu, sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normal_two_sided_limits(p, mu, sigma):\n",
+    "    # calculate the bounds around the mean\n",
+    "    # that have probability p\n",
+    "    tail_p = (1 - p)/2\n",
+    "    \n",
+    "    # how far to the right do we get probability tail_p\n",
+    "    high = inverse_normal_cdf(1 - tail_p, mu, sigma)\n",
+    "    \n",
+    "    # how far to the left\n",
+    "    low = inverse_normal_cdf(tail_p, mu, sigma)\n",
+    "    \n",
+    "    return low, high"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def two_sided_p_value(x, mu, sigma):\n",
+    "    \"\"\"\n",
+    "    Calculates that, assuming X comes from N(mu, sigma),\n",
+    "    what is the probability that we observe something as\n",
+    "    extreme as x. I.e. what is the probabily in the tails\n",
+    "    that are |mu-x| apart.\n",
+    "    \"\"\"\n",
+    "    return normal_tail_probability(abs(mu-x), mu, sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(469.0122266638163, 530.9877733361837)"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal_two_sided_limits(0.95, mu, sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3115720733144085"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal_tail_probability(16, mu, sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6884279266855915"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal_center_probability(16, mu, sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3759205825480747"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_sided_p_value(486, mu, sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.811388300841896"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04298479507085862"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_sided_p_value(532, mu, sigma) # If H0 were true, we just won the lottery. So... H0 is probably false :("
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 1000\n",
+    "p = 0.5\n",
+    "flips = binom(n,p)\n",
+    "mu = n*p\n",
+    "sigma = math.sqrt(n*p*(1-p))"
+   ]
   }
  ],
  "metadata": {
