--- a/Scratch.ipynb
+++ b/Scratch.ipynb
@@ -202,6 +202,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tuples and sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [(3, 'apple'), (5, 'orange'), (2, 'apple'), (1.4, 'apple'), (5.5, 'orange'), (10, 'apple')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1.4, 'apple'),\n",
+       " (2, 'apple'),\n",
+       " (3, 'apple'),\n",
+       " (5, 'orange'),\n",
+       " (5.5, 'orange'),\n",
+       " (10, 'apple')]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def firstPart(tup):\n",
+    "    print(f\"firstPart({tup}) called\")\n",
+    "    return tup[0] # just return first part"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstPart((3, 'apple')) called\n",
+      "firstPart((5, 'orange')) called\n",
+      "firstPart((2, 'apple')) called\n",
+      "firstPart((1.4, 'apple')) called\n",
+      "firstPart((5.5, 'orange')) called\n",
+      "firstPart((10, 'apple')) called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1.4, 'apple'),\n",
+       " (2, 'apple'),\n",
+       " (3, 'apple'),\n",
+       " (5, 'orange'),\n",
+       " (5.5, 'orange'),\n",
+       " (10, 'apple')]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(arr, key=firstPart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 'apple')\n",
+      "(5, 'orange')\n",
+      "(2, 'apple')\n",
+      "(1.4, 'apple')\n",
+      "(5.5, 'orange')\n",
+      "(10, 'apple')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1.4, 'apple'), (2, 'apple'), (3, 'apple')]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(arr, key=firstPart)[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1.4, 'apple'), (2, 'apple'), (3, 'apple')]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(arr)[:3]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
