--- a/Scratch.ipynb
+++ b/Scratch.ipynb
@@ -344,6 +344,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'apple'),\n",
+       " (2, 'apple'),\n",
+       " (3, 'apple'),\n",
+       " (4, 'apple'),\n",
+       " (5, 'apple'),\n",
+       " (6, 'apple')]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ary = [1,2,3,4,5,6]\n",
+    "name = 'apple'\n",
+    "\n",
+    "#[(x,name) for x in ary]\n",
+    "\n",
+    "res = []\n",
+    "for x in ary:\n",
+    "    res += [(x,name)]\n",
+    "    \n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  3  0 -2]\n",
+      " [11  3 -1  0]\n",
+      " [ 1  3  1 -2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import numpy.linalg as la\n",
+    "\n",
+    "test = np.array([[1,2,3,4]])\n",
+    "points = np.array([[1,5,3,2],[12,5,2,4],[2,5,4,2]])\n",
+    "la.norm(points-test,axis=1)\n",
+    "print(points-test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 0, 'b': 0}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [\"a\", \"b\", \"a\"]\n",
+    "{l: 0 for l in a}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
